--- a/home-about.css
+++ b/home-about.css
@@ -1,3 +1,5 @@
+/*Style page for home.html and about.html files*/
+
 body {
     background: url("hockey-wallpaper.jpg") no-repeat center center fixed;
     background-size: cover; 
